docs: fix horizontal scrollbar height

--- a/docs/public/styles/common.css
+++ b/docs/public/styles/common.css
@@ -68,6 +68,7 @@ html {
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
